Revert "Revert "corrected the overlapping of nav bar and form slider in login page""

--- a/login.css
+++ b/login.css
@@ -210,7 +210,7 @@ body::before {
   overflow: hidden;
   transition: all 0.6s ease-in-out;
   border-radius: 150px 0 0 100px;
-  z-index: 1000;
+  z-index: 20;
 }
 
 .container.active .toggle-container {
